# ZSecretEscrow

./: .env  .env-local  .env.example  .gitignore  .gitmodules  FRONTEND-INTEGRATION.md  LICENSE  README-CONTRACTS.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
backend/: README.md
contracts/: README.md
data/: zescrow.db
deployments/: zecvault-deployment.json
docs/: api.yaml
scripts/: check-node-version.js
src/: index.js  package-lock.json  package.json
src/api/: server.js
src/api/routes/: balance.js  escrow.js  intent.js  privacy.js  transactions.js  user.js
src/contracts/evm/: ZecVault.sol  ZecVault.t.sol  foundry.toml
src/contracts/near/: escrow_intent.rs
src/database/: init-db.js  schema.sql
src/examples/: contracts_usage.js
src/mock/: zcash.js
src/scripts/: deploy.js  deploy_escrow_intent.js  deploy_zecvault.js  init-db.js  simple_deploy.js
src/services/: database.js  escrow_service.js  near_service.js  zcash_monitor.js  zcash_service.js
src/test/: escrow.test.js
web/: README.md  tailwind.config.js  tsconfig.json
web/src/backend/api/: balance.ts
web/src/backend/scripts/: monitorZec.ts
web/src/client/: .eslintrc.js  .eslintrc.json  app.tsx  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  serviceLoader.ts  store.ts  tailwind.config.ts
web/src/client/.next/: trace
web/src/client/app/: globals.css  layout.tsx  page.tsx
web/src/client/components/: DealCard.tsx  (+16 more)
web/src/contracts/near/escrow-intent/: Cargo.toml
web/src/contracts/near/escrow-intent/src/: lib.rs
(+82 files in other folders)
