[package]
name = "escrow_intent"
version = "0.1.0"
authors = ["ZSecretEscrow <info@zsecretescrow.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "5.11.0"
near-contract-standards = "5.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "1.0.0"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true 